--- a/source/form.html
+++ b/source/form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header">
       <a href="index.html" class="page-header__logo">
         <img src="https://via.placeholder.com/150x150">
@@ -40,7 +40,7 @@
     <main class="page-main">
       <h1 class="page-main__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
       <section class="contest">
-        <p class="text-style--blue">
+        <p class="contest__text">
           Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!
         </p>
         <form class="contest__form" action="https://echo.htmlacademy.ru/courses" method="post">
@@ -130,7 +130,7 @@
           </fieldset>
           <label class="contest__title">
             Опишите свои эмоции
-            <textarea class="contest__input--comment" name="comment" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+            <textarea class="contest__input" name="comment" rows="10" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
           </label>
           <button class="contest__button" type="submit">Отправить форму</button>
         </form>
@@ -154,13 +154,13 @@
           <a class="page-footer__link" href="">Ellipse</a>
         </li>
       </ul>
+      <!--
       <p class="page-footer__text">
         Разработано
         <a href="https://htmlacademy.ru/intensive/adaptive">
-          <svg>
-          </svg>
         </a>
       </p>
+      -->
     </footer>
   </body>
 </html>
