--- a/source/index.html
+++ b/source/index.html
@@ -42,22 +42,22 @@
       <section class="intro">
         <img src="https://via.placeholder.com/150x150">
         <div class="download">
-          <a class="button download__button" href="">
+          <a class="button download__button" href="https://www.apple.com/ru/ios/app-store/">
             Скачать приложение
           </a>
           <ul class="download__list">
             <li class="download__item">
-              <a class="download__link" href="">
+              <a class="download__link" href="https://www.apple.com/ru/ios/app-store/">
                 <span class="visually-hidden">App Store</span>
               </a>
             </li>
             <li class="download__item">
-              <a class="download__link" href="">
+              <a class="download__link" href="https://play.google.com/store">
                 <span class="visually-hidden">Android</span>
               </a>
             </li>
             <li class="download__item">
-              <a class="download__link" href="">
+              <a class="download__link" href="https://www.microsoft.com/ru-RU/store/apps">
                 <span class="visually-hidden">Windows</span>
               </a>
             </li>
@@ -97,32 +97,47 @@
       </section>
       <section class="reviews">
         <div class="reviews__wrapper slider">
-          <div class="reviews__list slider__list">
-            <blockquote class="reviews__item slider__item--active">
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item slider__item slider__item--active">
               <div class="reviews__author-info">
-                <cite class="reviews__author-name">Николай Петров</cite>
+                <b class="reviews__author-name">
+                  Николай Петров
+                </b>
                 <p class="reviews__text">
                   Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
                 </p>
+                <span>
+                  25 лет, водитель трамвая
+                </span>
               </div>
-            </blockquote>
-            <blockquote class="reviews__item slider__item">
+            </li>
+            <li class="reviews__item slider__item">
               <div class="reviews__author-info">
-                <cite class="reviews__author-name">Николай Петров</cite>
+                <b class="reviews__author-name">
+                  Николай Петров
+                </b>
                 <p class="reviews__text">
                   Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
                 </p>
+                <span>
+                  25 лет, водитель трамвая
+                </span>
               </div>
-            </blockquote>
-            <blockquote class="reviews__item slider__item">
+            </li>
+            <li class="reviews__item slider__item">
               <div class="reviews__author-info">
-                <cite class="reviews__author-name">Николай Петров</cite>
+                <b class="reviews__author-name">
+                  Николай Петров
+                </b>
                 <p class="reviews__text">
                   Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!
                 </p>
+                <span>
+                  25 лет, водитель трамвая
+                </span>
               </div>
-            </blockquote>
-          </div>
+            </li>
+          </ul>
           <ul>
             <li>
               <button class="slider__toggle slider__toggle--current" type="button">
@@ -142,7 +157,7 @@
           </ul>
         </div>
       </section>
-      <div class="rate">
+      <section class="rate">
         <table class="rate-table">
           <thead>
             <tr>
@@ -189,7 +204,7 @@
             </button>
           </li>
         </ul>
-      </div>
+      </section>
       <section class="communication">
         <p class="communication__text">
           Остались вопросы? Свяжитесь с нами!
