--- a/source/photo.html
+++ b/source/photo.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Пинк</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
@@ -125,20 +123,20 @@
       <section class="send">
         <form action="https://echo.htmlacademy.ru/courses" method="post">
           <img src="https://via.placeholder.com/150x150">
-          <ul class="send-list">
-            <li class="send-list__item">
+          <ul class="send__list">
+            <li class="send__item">
               <label>
                 <input type="radio" name="editing" value="crop" checked>
                 <img src="https://via.placeholder.com/50x50">
               </label>
             </li>
-            <li class="send-list__item">
+            <li class="send__item">
               <label>
                 <input type="radio" name="editing" value="fill">
                 <img src="https://via.placeholder.com/50x50">
               </label>
             </li>
-            <li class="send-list__item">
+            <li class="send__item">
               <label>
                 <input type="radio" name="editing" value="contrast">
                 <img src="https://via.placeholder.com/50x50">
@@ -147,7 +145,7 @@
           </ul>
           <div class="send__buttons">
             <button class="send__button" type="submit">Запостить</button>
-            <button class="send__button" type="button" disabled>Отмена</button>
+            <button class="send__button" type="button">Отмена</button>
           </div>
         </form>
       </section>
