--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container flex-container flex-container--space-between">
+      <div class="page-header__block container">
         <a class="page-header__link">
           <svg class="page-header__logo" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
@@ -19,40 +19,37 @@
             </g>
           </svg>
         </a>
-        <nav class="main-nav">
-          <button class="main-nav__toggle" type="button">
+        <nav class="nav">
+          <button class="nav__toggle" type="button">
             <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="49.945px" height="24.007px" viewBox="0 0 49.945 24.007" enable-background="new 0 0 49.945 24.007" xml:space="preserve">
               <g id="miu">
                 <g id="editor_list_view_hambuger_menu_glyph">
                   <g>
                     <path id="path-1" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
                   </g>
-                  <g>
-                    <path id="path-1_1_" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
-                  </g>
                 </g>
               </g>
             </svg>
             <span class="visually-hidden">Открыть меню</span>
           </button>
-          <ul class="main-nav__list">
-            <li class="main-nav__item">
-              <a class="main-nav__link">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link">
                 Главная
               </a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="">
+            <li class="nav__item">
+              <a class="nav__link" href="">
                 Фотографии
               </a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="">
+            <li class="nav__item">
+              <a class="nav__link" href="">
                 Конкурс
               </a>
             </li>
-            <li class="main-nav__item">
-              <a class="main-nav__link" href="">
+            <li class="nav__item">
+              <a class="nav__link" href="">
                 HTML Academy
               </a>
             </li>
@@ -61,28 +58,29 @@
       </div>
     </header>
     <main class="page-main">
-      <div class="page-main__background">
-        <h1 class="page-main__title">Взгляните на жизнь иначе!</h1>
-        <span class="page-main__image"></span>
-      </div>
       <section class="intro">
+        <h1 class="intro__title">Взгляните на жизнь иначе!</h1>
+        <span class="intro__image"></span>
         <div class="download container">
           <a class="button download__button" href="https://www.apple.com/ru/ios/app-store/">
             Скачать приложение
           </a>
           <ul class="download__list">
             <li class="download__item">
-              <a class="download__link download__link--apple" href="https://www.apple.com/ru/ios/app-store/">
+              <a class="download__link" href="https://www.apple.com/ru/ios/app-store/">
+                <img src="img/logo-apple.svg" width="47px" height="56px" alt="Логотип компании Apple">
                 <span class="visually-hidden">App Store</span>
               </a>
             </li>
             <li class="download__item">
-              <a class="download__link download__link--android" href="https://play.google.com/store">
+              <a class="download__link" href="https://play.google.com/store">
+                <img src="img/logo-android.svg" width="43px" height="47px" alt="Логотип Android">
                 <span class="visually-hidden">Android</span>
               </a>
             </li>
             <li class="download__item">
-              <a class="download__link download__link--microsoft" href="https://www.microsoft.com/ru-RU/store/apps">
+              <a class="download__link" href="https://www.microsoft.com/ru-RU/store/apps">
+                <img src="img/logo-microsoft.svg" width="44px" height="41px" alt="Логотип Microsoft">
                 <span class="visually-hidden">Microsoft</span>
               </a>
             </li>
