Продолжил верстать главную

--- a/source/index.html
+++ b/source/index.html
@@ -91,7 +91,7 @@
         </div>
       </section>
       <section class="advantages">
-        <div class="container">
+        <div class="advantages__block container">
           <p class="advantages__text">
             Устали от серости мегаполиса?
           </p>
@@ -99,28 +99,44 @@
             Нам есть, что вам предложить!
           </p>
         </div>
-        <div class="advantages__container">
-          <ul class="advantages__list container">
+        <div class="advantages__container container">
+          <img src="img/iphone-screen-3-tablet@1x.png" width="268px" height="471px" class="advantages__image advantages__image--medium">
+          <ul class="advantages__list">
             <li class="advantages__item">
+              <img class="advantages__screen" src="img/iphone-screen-1-desktop@1x.png" height="302px" width="300px">
               <h2 class="advantages__title">Поднимает настроение</h2>
               <p class="advantages__text advantages__text--information">
                 Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!
               </p>
             </li>
             <li class="advantages__item">
+              <img class="advantages__screen" src="img/iphone-screen-2-desktop@1x.png" height="302px" width="300px">
               <h2 class="advantages__title">Меняет мир вокруг</h2>
               <p class="advantages__text advantages__text--information">
                 Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить эффект
               </p>
             </li>
             <li class="advantages__item">
+              <img class="advantages__screen" src="img/iphone-screen-3-desktop@1x.png" height="302px" width="300px">
               <h2 class="advantages__title">Заводит новых друзей</h2>
               <p class="advantages__text advantages__text--information">
                 Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых
               </p>
             </li>
           </ul>
-          <span class="advantages__image"></span>
+          <img src="img/iphone-screen-mobile@1x.png" width="157px" height="320px" class="advantages__image">
+        </div>
+        <div class="advantages__additionally container">
+          <span class="advantages__svg"></span>
+          <div class="advantages__chunk">
+            <h2 class="advantages__title advantages__title--bold">Эффект на 24 часа!</h2>
+            <p class="advantages__text advantages__text--left">
+              Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!
+            </p>
+            <a href="" class="advantages__link">
+              Узнать больше об исследовании
+            </a>
+          </div>
         </div>
       </section>
       <section class="reviews">
